test/runnable/enumtest.nt
module enumtest;

macro import std.macro.assert;

enum Enum
{
    first,
    second,
    third,
}

void main() {
    Enum a = Enum.first;
    assert(a == 0);
    assert(a == Enum.first);
    assert(a != Enum.second);
    assert(Enum.third == 2);
}
